[tool.poetry]
name = "lazyboost"
version = "0.2.0"
description = "Python application to pull and sync Orders and Listings between Shopify and Etsy."
authors = ["Ankit Sadana <sadana.ankit@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["python", "e-commerce", "etsy", "shopify"]
exclude = [
    { path = "infra" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pyperclip = "^1.8.2"
shopifyapi = "^12.2.0"
boto3 = "^1.26.84"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
pylint = "^2.15.10"
safety = "^2.3.5"

[tool.poetry.scripts]
lazyboost = "lazyboost.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
