[tool.poetry]
name = "lazyboost"
version = "1.0.0"
description = "Python application to pull and sync Orders and Listings between Shopify and Etsy."
authors = ["Ankit Patterson <dev+lazyboost@weirdion.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["python", "e-commerce", "etsy", "shopify"]
packages = [
    { include = "lazyboost", from = "src"}
]
exclude = [
    { path = "infra" }
]

[tool.poetry.dependencies]
python = ">3.9,<4.0.0"
requests = "^2.32.4"
pyperclip = "^1.8.2"
shopifyapi = "^12.2.0"
boto3 = "^1.26.84"
packaging = "^23.1"
aws-lambda-powertools = {extras = ["all"], version = "^2.9.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^24.3.0"
safety = "^2.3.5"
isort = "^5.12.0"
pre-commit = "^3.2.0"

[tool.poetry.scripts]
lazyboost = "lazyboost.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 100

[tool.isort]
profile = "black"
