[tool.poetry]
name = "lazyboost"
version = "1.0.0"
description = "Python application to pull and sync Orders and Listings between Shopify and Etsy."
authors = ["Ankit Patterson <dev+lazyboost@weirdion.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["python", "e-commerce", "etsy", "shopify"]
packages = [
    { include = "lazyboost", from = "src"}
]
exclude = [
    { path = "infra" }
]

[tool.poetry.dependencies]
python = ">3.9,<4.0.0"
requests = "^2.32.0"
pyperclip = "^1.8.2"
shopifyapi = "^12.2.0"
boto3 = "^1.26.84"
packaging = "^25.0"
aws-lambda-powertools = {extras = ["all"], version = "^3.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
safety = "^3.6.1"
isort = "^6.0.1"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
lazyboost = "lazyboost.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 100

[tool.isort]
profile = "black"
