[metadata]
name = lazyboost
version = attr: lazyboost.__version__
author = Ankit Sadana
author-email = sadana.ankit@gmail.com
description = A simple way to manage your shop listings between Etsy SHop Manager and Facebook Page Shop.
long-description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license-file = LICENSE
platform = Linux
keywords = lazy, e-commerce, etsy, facebook
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Shop vendors
    License :: OSI Approved :: GPLv3 License
    Operating System :: Linux
    Programming Language :: Python
	Programming Language :: Python :: 3.8

[options]
zip_safe = false
python_requires = >= 3.8
setup_requires =
    setuptools >= 40.1.0
;install_requires =

[options.entry_points]
console_scripts =
    lazyboost = lazyboost.cli:main

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = true
